More mistake fixes

--- a/Thesis_Latex/content/chapter-conclusion.tex
+++ b/Thesis_Latex/content/chapter-conclusion.tex
@@ -5,17 +5,17 @@
 
 \section{Overview of the work}
 \label{sec:conclusion:overview}
-Over the course of this project we have overhauled the CHRYSALIS application structure on all levels of the architecture. First, significant changes were made to the overall codebase of both the business-logic library and the web application. The project codebase became cleaner and ready for future changes and additions. These changes have ensured simpler and more efficient development in the future.
+Over the course of this project, we have overhauled the CHRYSALIS application structure on all levels of the architecture. First, significant changes were made to the overall codebase of both the business-logic library and the web application. The project codebase became cleaner and ready for future changes and additions. These changes have ensured simpler and more efficient development in the future.
 
-Other than that, the persistence layer was introduced, providing safer and more reliable storage for the off-chain data and, by extension, laying the  foundation for the better user experience overall. On top of that the project's smart contracts have undergone a complete restructuring. This has lowered the performance costs of the on-chain operations as well as also prepared the project for the addition of new functional elements. Finally, we have implemented integration with the hyperledger network, thus making the system more flexible and adaptable to different environments.
+Other than that, the persistence layer was introduced, providing safer and more reliable storage for the off-chain data and, by extension, laying the  foundation for better user experience overall. On top of that, the project's smart contracts have undergone a complete restructuring. This has lowered the performance costs of the on-chain operations as well as also prepared the project for the addition of new functional elements. Finally, we have implemented integration of the hyperledger network, thus making the system more flexible and adaptable to different environments.
 
-The analysis of Caterpillar and its comparison with CHRYSALIS has shown that even though CHRYSALIS project, compared to Caterpillar, is still in its infancy, it already has leverage over the older and longer developed system in terms of user experience and in some cases even in performance costs, which shows its great potential.
+The analysis of Caterpillar and its comparison to CHRYSALIS has shown that even though the CHRYSALIS project, compared to Caterpillar, is still in its infancy, it already has leverage over the older and longer developed system in terms of user experience and in some cases even in performance costs, which shows its great potential.
 
-In its current stage, the project offers a simple platform for decentralized interorganizational process management, it enables deployment end execution of simple process models utilizing a blockchain network, though it is limited in scope, especially in terms of support of more advanced BPMN features, which could be improved during further development of the project
+In its current state, the project offers a simple platform for decentralized interorganizational process management, it enables deployment and execution of simple process models utilizing a blockchain network, though it is limited in scope, especially in terms of support of more advanced BPMN features, which could be improved during further development of the project.
 
 \section{Future development}
 \label{sec:conclusion:future}
 
-From a purely technical standpoint, the web application needs migration to the newer version of Webpack, to enable support of some libraries incompatible with the older versions, especially the ones related to Hyperledger integration. 
+From a purely technical standpoint, the web application needs migration to a newer version of Webpack to enable support of some libraries incompatible with the older versions, especially the ones related to the Hyperledger integration. 
 
 There are still a lot of improvements, that could be made to CHRYSALIS until it reaches production, for example, support of such BPMN features as service tasks or script tasks, using smart contracts as services or scripts, or support for other process modelling notations. In the persistence layer, there has also been laid the groundwork for the future inclusion of user system with the connection settings being configurable for every individual user. Introduction of the user system would allow to implement role-binding policies for actors participating in the process, which is crucial for interorganizational process modelling.  Implementation of a process modelling tool could be another point of improvement to not force the users to create and run their process models using separate applications.
